lang/cpp/src/util.h
@@ -81,6 +81,9 @@ static inline gpgme_keylist_mode_t add_to_gpgme_keylist_mode_t(unsigned int oldm
     if (newmodes & GpgME::WithTofu) {
         oldmode |= GPGME_KEYLIST_MODE_WITH_TOFU;
     }
+    if (newmodes & GpgME::WithKeygrip) {
+        oldmode |= GPGME_KEYLIST_MODE_WITH_KEYGRIP;
+    }
 #ifndef NDEBUG
     if (newmodes & ~(GpgME::Local | GpgME::Extern | GpgME::Signatures | GpgME::SignatureNotations | GpgME::Ephemeral | GpgME::Validate)) {
         //std::cerr << "GpgME::Context: keylist mode must be one of Local, "
